# seal

./: Cargo.toml  README.md  build.rs
.github/workflows/: pages.yml
apps/: build-bundle.mjs  publish.mjs
apps/calculator/: index.html  package-lock.json  vite.config.ts
apps/calculator/public/.seal/: manifest.json
apps/calculator/src/: main.ts  style.css
apps/pomodoro/: index.html  package-lock.json  package.json  vite.config.ts
apps/pomodoro/public/.seal/: manifest.json
apps/pomodoro/src/: main.ts  style.css
assets/: banner.avif
assets/sample-app/: index.html  life.js  style.css
docs/: seal.md  url-transform.md
extension/: background.js  content.js  manifest.json  popup.html  popup.js
registry/: .gitignore
registry/script/: Deploy.s.sol
registry/src/: SealRegistry.sol
registry/test/: SealRegistry.t.sol
src/: dns.rs  dns_server.rs  home.rs  lib.rs  local.rs  log.rs  main.rs  registry.rs  serve.rs  server.rs  service.rs  state.rs  tls.rs  url.rs
submission/: README.md  thumbnail.avif
