[package]
name = "seal"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
rcgen = { version = "0.13", features = ["x509-parser"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
psl = "2"
tiny-keccak = { version = "2", features = ["keccak"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tower = "0.5"
tower-service = "0.3"
mime_guess = "2"
hex = "0.4"
dirs = "5"
anyhow = "1"
time = "0.3"
libc = "0.2"
